--- a/scss/partials/components/_menus.scss
+++ b/scss/partials/components/_menus.scss
@@ -136,6 +136,7 @@
 /* Utility menus */
 .utility-menu {
   list-style: none;
+  padding: 0;
   text-align: center;
   &__jump-link {
     display: inline-block;
