--- a/scss/base.scss
+++ b/scss/base.scss
@@ -4,6 +4,7 @@
  */
 
 @import "compass";
+@import "breakpoint";
 @import "partials/global/normalize";
 @import "partials/global/v_colors";
 @import "partials/global/v_fonts";
