--- a/scss/partials/components/_page.scss
+++ b/scss/partials/components/_page.scss
@@ -20,7 +20,7 @@
       padding: 5em 0 0 0;
       &:link, &:visited { border: none; }
       // >= ~600px
-      @media only screen and (min-width: $smtab_portrait_max) {
+      @include breakpoint($smtab_portrait_max) {
         margin-top: 1em;
         padding: 6.5em 0 0 0;
       }
@@ -36,7 +36,7 @@
 .main-content-wrapper {
   .main-content { padding: 10px 0 0; }
   // >= ~600px
-  @media only screen and (min-width: $smtab_portrait_max) {
+  @include breakpoint($smtab_portrait_max) {
     .main-content { padding: 20px 0 0; }
     .with-aside-left.aside-count-one & {
       margin-left: 30%;
@@ -59,7 +59,7 @@
 }
 .aside-left-wrapper {
   // >= ~600px
-  @media only screen and (min-width: $smtab_portrait_max) {
+  @include breakpoint($smtab_portrait_max) {
     padding-right: 10px;
     width: 30%;
     .aside-count-two & { width: 25%; }
@@ -67,7 +67,7 @@
 }
 .aside-right-wrapper {
   // >= ~600px
-  @media only screen and (min-width: $smtab_portrait_max) {
+  @include breakpoint($smtab_portrait_max) {
     float: right;
     padding-left: 10px;
     width: 30%;
