--- a/scss/partials/components/_typography.scss
+++ b/scss/partials/components/_typography.scss
@@ -9,7 +9,7 @@ h5.steroid-text { font-size: 1.5em; }
 h6.steroid-text { font-size: 1.25em; }
 
 // >= ~768px
-@media only screen and (min-width: $tab_portrait_max) {
+@include breakpoint($tab_portrait_max) {
   .steroid-text { font-size: 1.375em; }
   h3.steroid-text { font-size: 2.25em; }
   h4.steroid-text { font-size: 1.875em; }
