--- a/scss/partials/global/_v_positioning.scss
+++ b/scss/partials/global/_v_positioning.scss
@@ -1,16 +1,18 @@
 // @file: media query breakpoints, layout dimension defaults, and z-indexes
 
+// turning on breakpoint's auto ems conversion
+$breakpoint-to-ems: true;
+
 // Media query breakpoints
-// TODO: use breakpoint
-$hh_portrait_max: 20em; // 320px
-$hh_landscape_max: 30em; // 480px
-$smtab_portrait_max: 37.5em; // 600px
-$tab_portrait_max: 48em; // 768px
-$smtab_landscape_max: 50em; // 800px
-$tab_landscape_max: 64em; // 1024px
+$hh_portrait_max: 320px;
+$hh_landscape_max: 480px;
+$smtab_portrait_max: 600px;
+$tab_portrait_max: 768px;
+$smtab_landscape_max: 800px;
+$tab_landscape_max: 1024px;
 
 // Layout dimension defaults
-$row_width: 67.5em; // 1280px
+$row_width: 1280px;
 
 // Z-indexes
 $z_top: 1000;
