--- a/scss/partials/components/_menus.scss
+++ b/scss/partials/components/_menus.scss
@@ -7,7 +7,7 @@
   top: 0;
   width: 100%;
   z-index: $z-mid;
-  @media only screen and (min-width: $smtab_portrait_max) {
+  @include breakpoint($smtab_portrait_max) {
     text-align: center;
     .admin-menu & { top: 15px; }
   }
@@ -29,7 +29,7 @@
       right: 0;
       top: 0;
     }
-    @media only screen and (min-width: $smtab_portrait_max) {
+    @include breakpoint($smtab_portrait_max) {
       display: none;
     }
   }
@@ -44,7 +44,7 @@
       height: auto;
       overflow: show;
     }
-    @media only screen and (min-width: $smtab_portrait_max) {
+    @include breakpoint($smtab_portrait_max) {
       display: inline;
     }
   }
@@ -52,7 +52,7 @@
     background-color: lighten(#000, 30%);
     margin: 0 0 1px;
     padding: 0;
-    @media only screen and (min-width: $smtab_portrait_max) {
+    @include breakpoint($smtab_portrait_max) {
       background-color: transparent;
       display: inline-block;
       margin: 0;
