cleaning up js file and comments in positioning partial

--- a/scss/partials/global/_v_positioning.scss
+++ b/scss/partials/global/_v_positioning.scss
@@ -14,7 +14,7 @@ $tab_landscape_max: 1024px;
 // Layout dimension defaults
 $row_width: 1280px;
 
-// Z-indexes
+// Z-indexes & off-canvas
 $z_top: 1000;
 $z_mid: 500;
 $z_low: 10;
